--- a/journal/202009.md
+++ b/journal/202009.md
@@ -9,7 +9,7 @@ _الصورة: البنى المخفية في المدار التربيعي بو
 الأحداث البارزة لشهر شتنبر:
 
 * تم أخيرًا دمج طلب سحب إنفاق الخزينة اللامركزية، بعد عملية مراجعة شاملة.
-* تتعامل dcrdex مع العديد من سيناريوهات المقايضة غير الموثوقة المعقدة التي تم اكتشافها في الاختبارات المبكرة، وقد تم إجراء أول مقايضة على الشبكة الرئيسية في أوائل شهر أكتوبر، ومن المفترض أن يكون الحد الأدنى من المنتج القابل للتطبيق MVP جاهزًا للاستخدام العام قريبًا.
+* تتصدى dcrdex مع العديد من سيناريوهات المقايضة غير الموثوقة المعقدة التي تم اكتشافها في الاختبارات المبكرة، وقد تم إجراء أول مقايضة على الشبكة الرئيسية في أوائل شهر أكتوبر، ومن المفترض أن يكون الحد الأدنى من المنتج القابل للتطبيق MVP جاهزًا للاستخدام العام قريبًا.
 * تمت الموافقة على أول طلب لتقديم اقتراح على بوليتيا، لتغيير الرسائل على موقع decred.org، وتم تلقي 4 اقتراحات مرشحة. وسوف يبدأ التصويت على هذه المقترحات قريبًا.
 * تم إطلاق موقع المقاييس على السلسلة dcronchain.com، كما تمت الموافقة عليه في اقتراح في يونيو.
 * تم الإطلاق الأولي للموقع الإلكتروني withdecred.org، كما تم تقديم اقتراح مرتبط لتمويل الهبات الترويجية، والذي تمت الموافقة عليه في أوائل أكتوبر.
@@ -20,7 +20,7 @@ _الصورة: البنى المخفية في المدار التربيعي بو
 
 [dcrd](https://github.com/decred/dcrd):
 
-يتم [دمج](https://twitter.com/marco_peereboom/status/1308125042149134336) [طلب سحب](https://github.com/decred/dcrd/pull/2170) إنفاق الخزينة اللامركزية إلى الفرع الرئيسي. حصل على 576  تعليق مراجعة، تغيير 115 ملفاً، إضافة 15 ألف سطر من الكود، وقد استغرق الأمر أشهر 5 منذ نشر المسودة الأولى. تم سحب العديد من المطورين من مشاريع أخرى لمراجعة واختبار هذا الكود الخاص بالإجماع والبالغ الأهمية. شكراً للجميع على العمل الشاق على هذا التغيير الهائل!
+يتم [دمج](https://twitter.com/marco_peereboom/status/1308125042149134336) [طلب سحب](https://github.com/decred/dcrd/pull/2170) إنفاق الخزينة اللامركزية إلى الفرع الرئيسي. حصل على 576  تعليق مراجعة، تغيير 115 ملفاً، إضافة 15 ألف سطر من الكود، وقد استغرق الأمر خمسة أشهر منذ نشر المسودة الأولى. تم سحب العديد من المطورين من مشاريع أخرى لمراجعة واختبار هذا الكود الخاص بالإجماع البالغ الأهمية. شكراً للجميع على العمل الشاق على هذا التغيير الهائل!
 
 يصف إقتراح تغيير ديكريد DCP0006 تغيير الإجماع القادم قيد [المراجعة](https://github.com/decred/dcps/pull/17).
 
@@ -51,7 +51,7 @@ _الصورة: البنى المخفية في المدار التربيعي بو
 * التعامل مع [التغيير](https://github.com/decred/dcrwallet/pull/1830) لشراء التذاكر غير المختلطة
 * حفظ المعاملات [غير المنشورة](https://github.com/decred/dcrwallet/pull/1838) في قاعدة البيانات (ضروري لمنع بعض مخرجات المحفظة السابقة من الإنفاق المزدوج عبر عمليات إعادة التشغيل، أو الاستمرار في إرسال المعاملات tx الموقعة جزئيًا؛ سيتم استخدام هذا بواسطة عملاء vspd)
 * علامة جديدة لإضافة التذاكر [يدويًا](https://github.com/decred/dcrwallet/pull/1833) فقط وعدم اكتشافها من خلال مزامنة الشبكة (سيتم استخدام هذه العلامة من قبل مشرفي vspd لمنع المستخدمين من الحصول على أصوات مجانية عن طريق إعادة استخدام عنوان التصويت الخاص بهم. مع تعيين هذه العلامة، يمكن إضافة التذاكر إلى vspd فقط من خلال واجهة برمجة التطبيقات المناسبة)
-* إضافة برنامج نصي لاسترداد لنتائج P2SH [listunspent](https://github.com/decred/dcrwallet/pull/1842) (خاص بـ dcrdex)
+* إضافة برنامج نصي لاسترداد نتائج P2SH [listunspent](https://github.com/decred/dcrwallet/pull/1842) (خاص بـ dcrdex)
 * تغييرات لدعم [vspd](https://github.com/decred/dcrwallet/pull/1840)
 * تنفيذ طريقة [sendrawtransaction](https://github.com/decred/dcrwallet/pull/1846)
 * ساعد اختبار مكثف من قبل عملاء vspd و dcrdex على تحديد وإصلاح العديد من الأخطاء
@@ -294,7 +294,7 @@ CMS:
 
 * تعرف على المبدعين: كيف يهدف جيك يوكوم بيات من ديكريد إلى إعادة تعريف الحوكمة، باستخدام تقنية سلسلة الكتل - [باللغة الصينية](https://github.com/Decred-CN/articles/blob/master/Meet%20The%20Disruptors.md) بواسطة Dominic@
 * موجز بوليتيا العددين 36 و37 - [بالعربية](https://insaf01.github.io/politeia-digest-ar/) بواسطة arij@ و abdulrahman4@
-* تمت [ترجمة](https://xaur.github.io/decred-news/) مجلة لشهر غشت 2020 إلى العربية بواسطة (arij@ و abdulrahman4@) والصينية بواسطة (Dominic@) والإسبانية بواسطة (francov\_@). شكرا لكم جميعا لنشر الكلمة!
+* تمت [ترجمة](https://xaur.github.io/decred-news/) المجلة لشهر غشت 2020 إلى العربية بواسطة (arij@ و abdulrahman4@) والصينية بواسطة (Dominic@) والإسبانية بواسطة (francov\_@). شكرا لكم جميعا لنشر الكلمة!
 
 تم [هنا](https://github.com/decredcommunity/translations/blob/master/index.md) تجميع قائمة بجميع الترجمات المعروفة لمحتوى ديكريد. إذا كنت تستمتع بمجلة ديكريد للقراءة حول كل الأعمال التي يتم إجراؤها في ديكريد، فافتح [هذه](https://github.com/decredcommunity/translations/blob/master/index.md) القائمة التي تضم 280 موضوعًا وقم بالتمرير لمدة دقيقة للحصول على حقنة مماثلة.
 
