--- a/journal/202009.md
+++ b/journal/202009.md
@@ -338,9 +338,9 @@ CMS:
 * آخر أخبار التطوير العاجلة على تويتر من [moo31337@](https://twitter.com/marco_peereboom/status/1308125042149134336) (الإنفاق اللامركزي للخزينة) وعن (dcrdex) بواسطة [chappjc@](https://twitter.com/chappjc/status/1302798545439817730)
 * jz يؤكد أن ديكريد هي [ChadCoin#](https://twitter.com/jz_bz/status/1310639727477915648)
 
-# الأسواق
+## الأسواق
 
-في غشت تم تداول DCR بين 11.03 و 17.30 دولار أمريكي و 0.00106-0.00148 BTC. وكان متوسط ​​السعر اليومي 13.26 دولار.
+في شتنبر تم تداول DCR بين 11.03 و 17.30 دولار أمريكي و 0.00106-0.00148 BTC. وكان متوسط ​​السعر اليومي 13.26 دولار.
 
 ## الخارجية ذات الصلة
 
