--- a/journal/202010.md
+++ b/journal/202010.md
@@ -8,26 +8,26 @@ _الصورة: إعادة الهيكلة 1 بواسطة saender@_
 
 الأحداث البارزة لشهر أكتوبر:
 
-* تم إصدار مرشحي إصدار للنسخة 1.6.0، و سيتم إصدار مرشح الإصدار الثالث قريبًا بعد إدخال الإصلاحات و التحسينات بعد إختبار المجتمع له.
-* رافق الإصدار الأولي لمنتج dcrdex القابل للتطبيق على الشبكة الرئيسية أول مرشح لإطلاق الإصدار 1.6.0. وأصبح بإمكان مستخدمي واجهة خط الأوامر CLI الآن إضافة dcrdex إلى التثبيت من خلال إضافة وسيطة إضافية إلى أمر التثبيت.
-* تحول انتباه العديد من أفراد المجتمع الآن إلى الاستفادة القصوى من الإصدار 1.6 المناسب عند خروجه، تحقق من قسم الانتشار لمعرفة ما يخططون له.
+* تم إصدار مرشحي إصدار للنسخة 1.6.0، و سيتم إصدار مرشح الإصدار الثالث قريبًا بعد إدخال الإصلاحات و التحسينات وبعد إختبار المجتمع له.
+* رافق الإصدار الأولي لمنتج dcrdex القابل للتطبيق على الشبكة الرئيسية أول مرشح لإطلاق الإصدار 1.6.0. وأصبح بإمكان مستخدمي واجهة خط الأوامر CLI الآن إضافة dcrdex إلى التثبيت من خلال إضافة نِقرَة إضافية إلى أمر التثبيت.
+* تحول الآن انتباه العديد من أفراد المجتمع إلى الاستفادة القصوى من إصدار 1.6 عند خروجه، تحقق من قسم الانتشار لمعرفة ما يخططون له.
 * احتفلت بوليتيا بسنتين من الإنتاج، تهانينا للأشخاص الذين يقفون وراء المقترحات السبعة و أربعون المعتمدة وأصحاب الحصص الذين صوتوا لصالحهم.
 
 ## الإصدار الأولي ل DCRDEX
 
-بعد مرور أكثر من عام بقليل على الموافقة على [طلب تقديم المقترحات](https://proposals.decred.org/proposals/5431da8) ومقترحات [التطوير](https://proposals.decred.org/proposals/417607a) على بوليتيا، بات بوسع مستخدمي ديكريد التداول بين DCR و BTC من دون المخاطرة بأموالهم ومعلوماتهم الشخصية من خلال منصات المُبادلات الاحتجازية.
+بعد مرور أكثر من عام بقليل على الموافقة على [طلب تقديم مقترح](https://proposals.decred.org/proposals/5431da8) ومقترح [التطوير](https://proposals.decred.org/proposals/417607a) على بوليتيا، بات بوسع مستخدمي ديكريد التداول بين DCR و BTC من دون المخاطرة بأموالهم ومعلوماتهم الشخصية من خلال منصات المُبادلات الاحتجازية.
 
 أعقب أول [إصدار](https://github.com/decred/dcrdex/releases/tag/release-v0.1.0) منتج قابل للتطبيق بحد أدنى إصدار تصحيح [v0.1.1](https://github.com/decred/dcrdex/releases/tag/release-v0.1.1) سريع وهو الأحدث حاليا. 
 
 تفضل بزيارة الموقع [dex.decred.org](https://dex.decred.org/) لبدء الاستخدام، أو اتبع [الدليل](https://www.publish0x.com/block-commons/how-to-get-on-dcrdex-mvp-xolpzmv) بواسطة richardred@، أو شاهده أثناء العمل في مقطع [الفيديو](https://twitter.com/Decred_News/status/1320184172749721600). يمكن الاطلاع على أحدث دفتر للطلبات في لوحة معلومات [السوق](https://explorer.dcrdata.org/market) في dcrdata، مع المزيد من البيانات العامة للمتابعة.
 
-> أريد أن أشكر جميع مختبرينا السابقين على تعليقاتكم وصبركم بينما نمضي قدمًا في هذا المشروع. لقد قمنا بمراعاة الكثير من التعليقات التقييمية، وحللنا عددًا من مشاكل واجهة المستخدم/تجربة المستخدم، وأقمنا بإصلاح بعض الأخطاء التي ظهرت في سيناريوهات استرداد المطابقة. ([chappjc@](https://matrix.to/#/!mlRZqBtfWHrcmgdTWB:decred.org/$AQsNUyN7WWfYR6IhOgtGckBAecXP5ASXCYKFBpNWrcM))
+> أريد أن أشكر جميع مختبرينا السابقين على تعليقاتكم وصبركم بينما نمضي قدمًا في هذا المشروع. لقد قمنا بمراعاة الكثير من التعليقات التقييمية، وحللنا عددًا من مشاكل واجهة المستخدم/تجربة المستخدم، وقمنا بإصلاح بعض الأخطاء التي ظهرت في سيناريوهات استرداد المطابقة. ([chappjc@](https://matrix.to/#/!mlRZqBtfWHrcmgdTWB:decred.org/$AQsNUyN7WWfYR6IhOgtGckBAecXP5ASXCYKFBpNWrcM))
 
-تهانينا للجميع مع إطلاق الإصدار!
+تهانينا للجميع لإطلاق الإصدار!
 
 ## مرشحات الإصدار للنسخة 1.6
 
-يمكن إجراء الاختبارات [هنا](https://github.com/decred/decred-binaries/releases) على مرشحات الإصدار ل dcrd و dcrwallet و Decrediton و dcrlnd. يرجى الأخذ في الاعتبار أنه على الرغم من وجود الميزات الرئيسية والتي تعمل في ديكريديتون، إلا أنه يتم توفير عدد من التحسينات على واجهة المستخدم وإصلاحات الأخطاء في مرشح إصدار ثالث.
+يمكن إجراء الاختبارات [هنا](https://github.com/decred/decred-binaries/releases) على مرشحات الإصدار ل dcrd و dcrwallet و Decrediton و dcrlnd. يرجى الأخذ في الاعتبار أنه على الرغم من وجود الميزات الرئيسية والتي تعمل في ديكريديتون، إلا أنه سوف يتم توفير عدد من التحسينات على واجهة المستخدم وإصلاحات الأخطاء في مرشح الإصدار الثالث.
 
 كما هو الحال دائمًا، [تحقق من الثنائيات](https://docs.decred.org/advanced/verifying-binaries/) قبل تشغيلها.
 
@@ -50,7 +50,7 @@ _الصورة: إعادة الهيكلة 1 بواسطة saender@_
 * أداة لإنشاء الشهادات [المعاد كتابتها](https://github.com/decred/dcrd/pull/2425) لدعم المزيد من حالات الاستخدام (مثل عدم تضمين اسم المضيف والواجهة في الشهادة أو تحديد أي من الخوارزميات الأربعة المدعومة)
 * تحسين [عُدَّةُ اختبار](https://github.com/decred/dcrd/pull/2329) توليد السلسلة
 * [ترحيل](https://github.com/decred/dcrd/pull/2446) قاعدة البيانات الثابتة لدعم التحديث من الإصدار 1.4
-* للتحديث من عملاء أقدم حيث قاعدة البيانات قديمة جدًا و لا يمكن ترحيلها، أصبحت إعادة تنزيل السلسلة من البداية تدار بشكل [تلقائي](https://github.com/decred/dcrd/pull/2449) بحيث لا تتطلب أي تدخل يدوي من المستخدم
+* للتحديث من عملاء أقدم حيث أن قاعدة البيانات قديمة جدًا و لا يمكن ترحيلها، أصبحت إعادة تنزيل السلسلة من البداية تدار بشكل [تلقائي](https://github.com/decred/dcrd/pull/2449) بحيث لا تتطلب أي تدخل يدوي من المستخدم
 
 استمر العمل المدمج بعد نقطة التفرع للإصدار 1.6:
 
@@ -112,9 +112,9 @@ _الصورة: إعادة الهيكلة 1 بواسطة saender@_
 **[dcrpool](https://github.com/decred/dcrpool)**
 
 * دعم تحديث الخزينة [DCP-6](https://github.com/decred/dcrpool/pull/252)
-* سيتم مصادرة المدفوعات [الصغيرة جدًا](https://github.com/decred/dcrpool/pull/254) للمشاركين في المجمع كرسوم للمجمع. أحد أسباب ذلك هو أن المدفوعات الصغيرة جدًا ستفشل في معاملة الدفع على أي حال. وهناك سبب آخر يتمثل في أنها تعمل كحافز للمساهمة بموارد كافية في المجمع للحصول على تعويضات عادية عندما تعدن كتلة وتثبط المساهمة في العمل المتقطع وغير المنتظم.
+* سيتم مصادرة المدفوعات [الصغيرة جدًا](https://github.com/decred/dcrpool/pull/254) للمشاركين في التَجَمّع كرسوم للتَجَمّع. أحد أسباب ذلك هو أن المدفوعات الصغيرة جدًا ستفشل في معاملة الدفع على أي حال. وهناك سبب آخر يتمثل في أنها تعمل كحافز للمساهمة بموارد كافية في التَجَمّع للحصول على تعويضات عادية عندما تعدن كتلة وتثبط المساهمة في العمل المتقطع وغير المنتظم.
 * تم بذل الكثير من العمل لدعم [Postgres](https://github.com/decred/dcrpool/issues/257) كخلفية لقاعدة البيانات
-* عرض مدفوعات [رسوم المجمع](https://github.com/decred/dcrpool/pull/249) المعلقة والمؤرشفة على صفحة المشرف
+* عرض مدفوعات [رسوم التَجَمّع](https://github.com/decred/dcrpool/pull/249) المعلقة والمؤرشفة على صفحة المشرف
 * إعادة هيكلة كود [الدفع للمكافأة](https://github.com/decred/dcrpool/pull/250)
 * العديد من التحسينات لاختبار الكود
 
@@ -172,7 +172,7 @@ _الصورة: إعادة الهيكلة 1 بواسطة saender@_
 
 **[dcrdata](https://github.com/decred/dcrdata)**
 
-* تمت [إضافة](https://github.com/decred/dcrdata/pull/1787)  بيانات dex.decred.org إلى لوحة تحكم [الأسواق](https://explorer.dcrdata.org/market) (إضافة دفاتر الطلبات والسعر بداية، وسيتم إضافة الحجم تاليًا)
+* تمت [إضافة](https://github.com/decred/dcrdata/pull/1787)  بيانات dex.decred.org إلى لوحة تحكم [الأسواق](https://explorer.dcrdata.org/market) (إضافة دفاتر الطلبات والسعر بداية، وسيتم إضافة حجم التداول تاليًا)
 
 **[dcrros](https://github.com/decred/dcrros)**
 
@@ -214,7 +214,7 @@ _الصورة: إعادة الهيكلة 1 بواسطة saender@_
 
 تلقت [الخزينة](https://explorer.dcrdata.org/address/Dcur2mcGjmENx4DhNqDctW5wJCVyT3Qeqkx) في شهر أكتوبر 12,388 DCR وأنفقت 14,748 DCR. وباستخدام معدل المتوسط اليومي لشهر أكتوبر ب DCR/USD والذي يقدر ب 12.01 دولارًا، ستكون الخزينة قد تلقت 149 ألف دولارا وأنفقت 177 ألف دولارا. ووفقًا لمتوسط السعر اليومي في شتنبر البالغ 13.26 دولارًا، فإن قيمة الفَوترة بالدولار الأميركي عن العمل المنجز في ذلك الشهر تكون قد بلغت 196 ألف دولار. واعتبارا من 4 نونبر، بلغ رصيد الخزينة 638,044 DCR (أي 7.9 مليون دولار أمريكي بسعر 12.38 دولار أمريكي).
 
-تم التصويت على الاقتراحات المرشحة الخاصة باقتراح طلب تقديم المقترحات لتغيير الرسائل على decred.org (تمت الموافقة عليها في شتنبر)، ولكن لم يتم الموافقة على أي من هذه المقترحات. وكانت النتائج كما يلي:
+تم التصويت على الاقتراحات المرشحة الخاصة باقتراح طلب تقديم مقترح لتغيير الرسائل على decred.org (تمت الموافقة عليها في شتنبر)، ولكن لم يتم الموافقة على أي من هذه المقترحات. وكانت النتائج كما يلي:
 
 * [D.R.E.A.M.](https://proposals.decred.org/proposals/4532397) - بلغت نسبة الموافقة 48٪ ونسبة المشاركة 29٪ (_تجاهل تشاد في ديكريد الرفض واستمر على أية حال، لأنه تشاد_)
 * شعار ["Money Evolved"](https://proposals.decred.org/proposals/02d9fc2) مع تغييرات طفيفة على الموقع - بلغت نسبة الموافقة 25٪ ونسبة المشاركة 25٪
@@ -411,7 +411,7 @@ Coinmine بنسبة 0.02%
 
 [أصدرت](https://www.justice.gov/opa/pr/attorney-general-william-p-barr-announces-publication-cryptocurrency-enforcement-framework) وزارة العدل الأميركية "إطار إنفاذ قوانين العملات الرقمية" الذي يقدم نظرة عامة على فضاء العملات الرقمية واستخداماتها غير المشروعة، والقوانين القائمة، والتحديات والاستراتيجيات الحالية لمعالجتها. وعلى غرار [إرشادات](https://www.fincen.gov/sites/default/files/2019-05/FinCEN%20Guidance%20CVC%20FINAL%20508.pdf) FinCEN من ماي 2019، تعتبر الوثيقة أكثر صلة بخدمات حفظ الأصول.
 
-[أعلنت](https://komodoplatform.com/community-update-on-atomicdex-kyc-aml/) Komodo أنها ستنفذ إجراءات KYC/AML على شبكة السيولة AtomicDEX المدعومة رسميًا من قبل المطورين، على الرغم من أن منصة المبادلات لا تقوم بخدمات حفظ الأصول. ويذكر الإعلان شيئًا آخر يدعو للقلق إلى جانب الإجراء التنظيمي الأخير: "هناك إعادة شراء ومبادلة مقايضة للتوكنات المرتبطة بالتوكنات الشبيهة بالأمنية التي تدعم عمليات AtomicDEX، بما في ذلك الأصول مثل DEX token وأصول SuperNET وأي توكنات تتقاسم العائدات".
+[أعلنت](https://komodoplatform.com/community-update-on-atomicdex-kyc-aml/) Komodo أنها ستنفذ إجراءات KYC/AML على شبكة السيولة AtomicDEX المدعومة رسميًا من قبل المطورين، على الرغم من أن منصة المبادلات لا تقوم بخدمات حفظ الأصول. ويذكر الإعلان شيئًا آخر يدعو للقلق إلى جانب الإجراء التنظيمي الأخير: "هناك إعادة شراء ومبادلة مقايضة للتوكنات المرتبطة بالتوكنات الشبيهة بالصكوك التي تدعم عمليات AtomicDEX، بما في ذلك الأصول مثل DEX token وأصول SuperNET وأي توكنات تتقاسم العائدات".
 
 [اتهمت](https://www.cftc.gov/PressRoom/PressReleases/8270-20) CFTC مالكي BitMEX بتشغيل منصة تداول غير مسجلة وانتهاك لوائح CFTC، بما في ذلك عدم تطبيق إجراءات مكافحة غسيل الأموال.
 
