--- a/journal/202011.md
+++ b/journal/202011.md
@@ -9,11 +9,11 @@ _الصورة: إعادة الهيكلة II بواسطة saender@_
 أبرز قصص شهر نونبر:
 
 * تم إختبار مرشحات الإصدار للنسخة 1.6 من قبل المجتمع وتلقت العديد من إصلاحات الأخطاء وتحسينات تجربة المستخدم، و قد أصبح من الصعب الآن إيجاد مشاكل، مما يعني إقتراب خروج الإصدار الكامل.
-* أصدرت dcrdex إصدار تصحيح مع بعض إصلاحات الحالات الطرفية وطقم من واجهة المستخدم والتحسينات على واجهة المستخدم الخلفية للإصدار التالي.
+* أصدرت dcrdex إصدار تصحيحي، مع بعض إصلاحات الحالات الطرفية وطقم من التحسينات على واجهة المستخدم والواجهة الخلفية للإصدار التالي.
 * تمت الموافقة على تمويل التطوير المستمر لمحافظ الهاتف المحمول ومحفظة سطح المكتب GoDCR الجديدة، كما يشمل تمويل GoDCR أيضًا رعاية مكتبة Gio التي تستخدمها للواجهة.
-* يتم تهيئة VSP إلى vspd، قام أربعة موفرين بالتحديث بالفعل لدعم التذاكر الجديدة التي لا تتوفر على حساب والتي يتم خلطها اختياريًا والمقدمة من ديكريديتون في الإصدار 1.6
+* يتم تهيئة VSP إلى vspd، قام أربعة موفرين بالتحديث بالفعل لدعم التذاكر الجديدة التي لا تتطلب حساب ويتم خلطها اختياريًا عن طريق ديكريديتون في الإصدار 1.6
 
-## مرشح الإصدار 4 للنسخة 1.6
+## مرشح الإصدار الرابع للنسخة 1.6
 
 * لدى المرشحات الجديدة الكثير من الأخطاء التي تم إصلاحها في جميع الأجزاء الأربعة للإصدار 1.6 القادم. احصل على أحدث ثنائيات مرشحات الإصدار [هنا](https://github.com/decred/decred-binaries/releases) (انقر فوق `Assets`) وتأكد من [التحقق منها](https://docs.decred.org/advanced/verifying-binaries/).
 
@@ -29,7 +29,7 @@ _الصورة: إعادة الهيكلة II بواسطة saender@_
 
 تم الدمج في الفرع الرئيسي (يتم العمل على الإصدار 1.7) وتم نقله إلى فرع الإصدار للنسخة 1.6:
 
-* تم حد تجمع الذاكرة لكيلا تتتبع إحصائيات عدد كبير من المعاملات [السابقة](https://github.com/decred/dcrd/pull/2458) غير المؤكدة. وهذا يحول دون إمكانية وقوع عدد من الهجمات المعقدة ويزيد من سرعة إنشاء قوالب الكتلة للسلاسل الكبيرة من المعاملات غير المؤكدة.
+* تم حد تجمع الذاكرة لكيلا تتبَّع إحصائيات عدد كبير من المعاملات [السابقة](https://github.com/decred/dcrd/pull/2458) غير المؤكدة. وهذا يحول دون إمكانية وقوع عدد من الهجمات المعقدة ويزيد من سرعة إنشاء قوالب الكتلة للسلاسل الكبيرة من المعاملات غير المؤكدة.
 * تصحيح [معالجة حالة](https://github.com/decred/dcrd/pull/2469) تصويت الخزينة في أوامر استدعاء الإجراء البعيد RPC
 * إضافة حقول جديدة لإخراج بعض أوامر استدعاء الإجراء البعيد RPC للإشارة إلى مدخلات [treasurybase](https://github.com/decred/dcrd/pull/2470) و[treasuryspend](https://github.com/decred/dcrd/pull/2472) (الأموال القادمة من الخزينة الجديدة) وتحديث المستندات
 * تم إصلاح [مشكلة المزامنة](https://github.com/decred/dcrd/pull/2474) البسيطة في كود الخزانة المكتشف على شبكة الإختبار
@@ -57,10 +57,10 @@ _الصورة: إعادة الهيكلة II بواسطة saender@_
 * تمت إعادة صياغة صفحة [الخصوصية](https://github.com/decred/decrediton/pull/2987) من أجل البساطة، بعد [التصميم](https://github.com/decred/decrediton/issues/2965) المحدث
 * [صفحة المساعدة](https://github.com/decred/decrediton/pull/2885) التي تقدم ميزات الخصوصية
 * إظهار [السجلات](https://github.com/decred/decrediton/pull/2888) على صفحة الخصوصية
-* القدرة على السماح بإرسال معاملات من حسابات [غير](https://github.com/decred/decrediton/pull/2909) الحسابات المختلطة
-* عرض أداة الترشيح للمعاملات [المختلطة](https://github.com/decred/decrediton/pull/2926)
+* القدرة على السماح بإرسال معاملات من حسابات [غير](https://github.com/decred/decrediton/pull/2909) الحسابات المخلوطة
+* عرض أداة الترشيح للمعاملات [المخلوطة](https://github.com/decred/decrediton/pull/2926)
 * تم إصلاح وجهة [التغيير](https://github.com/decred/decrediton/pull/2889) الخاطئة لمحافظ الخصوصية
-* [تصفية](https://github.com/decred/decrediton/pull/2854) المقترحات التي أنهت التصويت حسب حالتها إما موافق عليها أو مرفوضة
+* [تصفية](https://github.com/decred/decrediton/pull/2854) المقترحات التي أنهت التصويت حسب حالتها إما موافق عليها أو رفضها
 * عدم السماح [بإغلاق](https://github.com/decred/decrediton/pull/3005) ديكريديتون أثناء تشغيل بعض العمليات
 * إلحاق حزمة [AppImage](https://github.com/decred/decrediton/pull/2864) حيث تأتي ديكريديتون كملف واحد قابل للتنفيذ (كأثر جانبي، يتيح ذلك لمستخدمي GNOME تجنب الاضطرار إلى تشغيله عبر سطر الأوامر)
 * إزالة الحد [الأقصى للمحافظ](https://github.com/decred/decrediton/pull/2886)
@@ -361,7 +361,7 @@ Coinmine بنسبة 0.02%
 
 * [ملصق](https://twitter.com/coveryfire7777/status/1324430999212744704) دعوة الفضاء للمنظمة المستقلة اللامركزية لديكريد Decred DAO بواسطة Exitus@
 * ديكريد، [سكينة الجيش السويسري](https://twitter.com/_Checkmatey_/status/1324835192100413441) للمال السليم بواسطة Checkmate@
-* مقطع دعائي [للتنين المخفي ذو الرؤس المتعددة](https://twitter.com/New_Copernicus/status/1333518011861372928) بواسطة New\_Copernicus@
+* مقطع دعائي [للتنين المخفي ذو الرؤوس المتعددة](https://twitter.com/New_Copernicus/status/1333518011861372928) بواسطة New\_Copernicus@
 * ألقِ نظرةً على تصميمات سلع OfficialCrypto في [Redbubble](https://officialcryptos.redbubble.com/) _(هل تعلم أن شعار ديكريد يطابق تمامًا "[Real Defi](https://twitter.com/OfficialCryptos/status/1325421754777526272)")_؟
 
 الترجمة:
@@ -403,7 +403,7 @@ Coinmine بنسبة 0.02%
 
 تم [العثور](https://www.reddit.com/r/bsv/comments/jq9jv3/and_its_gone_popular_bsv_multisig_provides_no/) على استبدال P2SH في محفظة Electrum الخاص ب BSV معطلاً بشكل أساسي، مما يسمح لأي شخص بإنفاق العملات  الموجودة في التجزئات المتعددة التوقيع على سلسلة BSV.
 
-تم [اختراق](https://rekt.ghost.io/value-defi-rekt/) بروتوكول Value DeFi مقابل 7 ملايين دولار، على الرغم من أن المهاجم أعاد 2 مليون دولار إلى عنوان العقد لأسباب غير معروفة. تم تنفيذ الاستغلال بقرض سريع، بعد أقل من 24 ساعة من قيام Value DeFi بالتغريد (تم حذفه الآن) للتفاخر بالأمن القوي مع "منع هجوم القرض السريع".
+تم [اختراق](https://rekt.ghost.io/value-defi-rekt/) بروتوكول Value DeFi مقابل 7 ملايين دولار، على الرغم من أن المهاجم أعاد 2 مليون دولار إلى عنوان العقد لأسباب غير معروفة. تم تنفيذ الاستغلال بقرض سريع، بعد أقل من 24 ساعة من قيام Value DeFi بالتغريد (تم حذفه الآن) للتفاخر بالأمان القوي مع "منع هجوم القرض السريع".
 
 تم [اختراق](https://medium.com/originprotocol/urgent-ousd-has-hacked-and-there-has-been-a-loss-of-funds-7b8c4a7d534c) العملة المستقرة OUSD بقرض سريع يستخدم لإجراء هجوم إعادة الدخول، لطباعة وإعادة (تخفيض) OUSD بما يعادل العرض المتداول بالكامل تقريبًا، مما يسمح للمتسلل باستخراج 7 ملايين دولار من القيمة.
 
