--- a/journal/202012.md
+++ b/journal/202012.md
@@ -6,11 +6,11 @@
 
 _الصورة: إعادة الهيكلة III بواسطة saender@_
 
-سنة جديدة سعيدة الجميع!
+سنة جديدة وسعيدة للجميع!
 
 أبرز أحداث شهر دجنبر:
 
-* بعد شهر آخر من الصقل، يبدو الإصدار 1.6 لامعًا جدًا بالفعل. كما يتم الإستعداد لإطلاق مرشح الإصدار 5.
+* بعد شهر آخر من الصقل، يبدو الإصدار 1.6 بالفعل لامعًا جدًا. كما يتم الإستعداد لإطلاق مرشح الإصدار الخامس.
 * في دجنبر، أصبحت مقاييس السلسلة أكثر جموحا، مع قفزة كبيرة في سعر التذكرة الذي وصل الى 191 DCR
 * إرتفعت مقاييس وسائل الإعلام أيضًا، مع إختراق مشروع الديكريد لمستوى المقاومة الرئيسي.
 * تم شطب DCR من Upbit، مما تسبب في ارتفاع السعر، وتمت إضافة تداول الهامش إلى العديد من منصات المبادلات الأخرى.
@@ -29,7 +29,7 @@ _الصورة: إعادة الهيكلة III بواسطة saender@_
 
 تم الدمج في الفرع الرئيسي:
 
-* تم نقل [فحوصات السياق](https://github.com/decred/dcrd/pull/2481) من وظائف السلامة/الموقع إلى المواقع المناسبة لاستعادة القيود المقصودة التي كانت موجودة قبل عمل الخزينة اللامركزية. ستكون هذه ضرورية لفصل أمر معالجة الكتلة عن أمر التنزيل.
+* تم نقل [فحوصات السياق](https://github.com/decred/dcrd/pull/2481) من وظائف السلامة/الموقع إلى المواقع المناسبة لاستعادة القيود المقصودة التي كانت موجودة قبل عمل الخزينة اللامركزية. ستكون هذه ضرورية لفصل أمر معالجة الكتلة من أمر التنزيل.
 * تم تغيير دلالات [التخزين المؤقت لكتلة](https://github.com/decred/dcrd/pull/2488) السلسلة الرئيسية لتكون أقل اعتماداً عند ترتيب رؤية بيانات الكتلة
 * تم استخراج إدارة الكتل في حزمة [`netsync`](https://github.com/decred/dcrd/pull/2500) الخاصة بها لتحسين إمكانية اختبارها والمزامنة مع الشبكة بشكل أكثر تنظيما من المصادقة بالإجماع
 * العديد من التغييرات الأخرى في اتجاه تنزيل كتلة [متعدد النظراء](https://github.com/decred/dcrd/issues/1145)
@@ -169,7 +169,7 @@ _الصورة: إعادة الهيكلة III بواسطة saender@_
 * كسر [ريديت](https://www.reddit.com/r/decred/) 10 آلاف مشارك: مرحى:
 * حصل [الديسكورد](https://discord.gg/GJ2GXfz) على نسبة لطيفة بزيادة 14٪
 * حصلت غرفة التيليجرام لتداول الديكريد [DecredTrading](https://t.me/DecredTrading) على زيادة 72٪ من المستخدمين، ب 158 مشترك جديد (الله يوفقنا)
-* حصل [Checkmate@](https://twitter.com/_Checkmatey_) على زيادة 11٪ من المتابعين (3.5 ألف) وقام بعمل ألف تغريدة أخرى (34 تقريبًا يوميًا)
+* حصل [Checkmate@](https://twitter.com/_Checkmatey_) على زيادة 11٪ من المتابعين (3.5 ألف) وقام بعمل ألف تغريدة في أخرى ~34 يوميًا)
 * كسبت غرفة التيليجرام [DecredES](https://t.me/DecredES) على حوالي 245 مشارك جديد بزيادة 18٪
 * تتوفر [CoinMarketCap](https://coinmarketcap.com/currencies/decred/) على 17.8 ألف مراقب لـديكريد
 
@@ -264,9 +264,9 @@ Coinmine بنسبة 0.02%
 * 3 دجنبر - [Hablemos Decred 24](https://decredcommunity.github.io/events/index/20201203.1)  - الإنترنت. ناقش elian@ وpablito@ مدى خصوصية العملات الرقمية.
 * 5 دجنبر - [المؤتمر العالمي لسلسلة الكتل](https://decredcommunity.github.io/events/index/20201205.1) - ووهان، الصين. لم يكن هناك فعالية رسمية لديكريد لكن التقى Dominic@ بأصدقاء قدامى في Cobo Wallet و F2Pool وآخرين لتعريفهم بالإصدار 1.6 القادم وقواعد الإجماع الجديدة.
 * 10 دجنبر -  [Hablemos Decred 25](https://decredcommunity.github.io/events/index/20201210.1) - الإنترنت. اجتمع فريق الديكريد الإسباني لمراجعة العمل لمدة عام في منظمة مستقلة لامركزية، ما هو الجيد و ما هو السيئ وما الجديد لسنة 2021.
-* 11 دجنبر - [Cripto Latin Fest Online 2020](https://decredcommunity.github.io/events/index/20201211.1) - الإنترنت. شارك في تنظيمه Paxful Latam، كانت الديكريد راعيةً لكبار الشخصيات. قدم elian@ نقاط حوار مشتركة لديكريد و برنامج التنين المخفي ذو الرؤس المتعددة القادم، والذي حصل على 1,600 مشاهدات على الفيسبوك و ما يقارب 800 مشاهدة على اليوتيوب. و في ندوة أخرى تحدث عن كيفية منع عمليات الاحتيال على العملات الرقمية.
+* 11 دجنبر - [Cripto Latin Fest Online 2020](https://decredcommunity.github.io/events/index/20201211.1) - الإنترنت. شارك في تنظيمه Paxful Latam، كانت الديكريد راعيةً لكبار الشخصيات. قدم elian@ نقاط حوار مشتركة لديكريد و برنامج التنين المخفي ذو الرؤوس المتعددة القادم، والذي حصل على 1,600 مشاهدات على الفيسبوك و ما يقارب 800 مشاهدة على اليوتيوب. و في ندوة أخرى تحدث عن كيفية منع عمليات الاحتيال على العملات الرقمية.
 * 16 دجنبر - [UAM Xochimilco](https://twitter.com/addcade/status/1338544856344317953) - مكسيكو سيتي، المكسيك. تحدثت adcade@ عن منظمة الديكريد و بوليتيا في مختبر Aula Multimedia التابع لجامعة UAM Xochimilco.
-* 18 دجنبر -[السنة الجديدة في Crypto Resources!](https://decredcommunity.github.io/events/index/20201218.1) — الإنترنت. نظمت أكاديمية Crypto Resources فعالية نهاية السنةم ودعت شركاء مثل الديكريد و Bitso و Prime XBT DAI و Binance وغيرهم. خلال ندوة الحوكمة، عرض  كيف تعمل حوكمة الديكريد، ودور بوليتيا و لامركزية الخزينة.
+* 18 دجنبر -[السنة الجديدة في Crypto Resources!](https://decredcommunity.github.io/events/index/20201218.1) — الإنترنت. نظمت أكاديمية Crypto Resources فعالية نهاية السنة ودعت شركاء مثل الديكريد و Bitso و Prime XBT DAI و Binance وغيرهم. خلال ندوة الحوكمة، عرض  كيف تعمل حوكمة الديكريد، ودور بوليتيا و لامركزية الخزينة.
 * 24 دجنبر - [ديكريد إسألني أي شيء](https://decredcommunity.github.io/events/index/20201224.1) - الإنترنت. تم إجراء فعالية إسألني أي شيء لـ OKEx في المجتمع الإسباني على [التيليجرام](https://t.me/OKExLATAM) مع حوالي 500 مستخدم. تم طرح أكثر من 30 سؤالًا حول حوكمة الديكريد والخصوصية والتطورات المستقبلية والتاريخ و منصة المُبادلات اللامركزية. كان هنالك أيضا هدية ب DCR (20 دولارًا من OKEx و 30 دولارًا من الديكريد بالإسبانية). انضم أكثر من 30 عضوًا جديدًا إلى قناة [DecredES@](https://t.me/DecredES).
 * 30 دجنبر - [هدية رأس السنة من الديكريد الإسبانية](https://decredcommunity.github.io/events/index/20201230.1) - للمشاركة ، كان على الأشخاص الانضمام إلى تيليجرام DecredES@ وإخبارهم بما يعجبهم في الديكريد. من بين 28 تعليقًا، تم اختيار 9 من أفضل التعليقات بناءً على معرفة وفهم المشروع وحصلوا على 3 DCR في المجموع.
 
@@ -278,7 +278,7 @@ Coinmine بنسبة 0.02%
 
 * يقدم [الجزء الأول](https://stakey.club/en/blockchain-gov-part1/) العملات الرقمية وطباعة الأموال والبتكوين
 * يغطي [الجزء الثاني](https://stakey.club/en/blockchain-gov-part2/) التكنولوجيا الكامنة وراء العملات الرقمية وأمن إثبات العمل والحوافز والتضخم
-* يشرح [الجزء الثالث](https://stakey.club/en/blockchain-gov-part3/) أنواع البنية الأساسية ((بدون إذن/ مصرح به، عام/خاص)، وحوكمة البتكوين، والخصوصية وإمكانية التبديل، وتطبيقات سلسلة الكتل بخلاف الأموال الرقمية (خاصة التصويت الإلكتروني)
+* يشرح [الجزء الثالث](https://stakey.club/en/blockchain-gov-part3/) أنواع البنية الأساسية ((بدون إذن/ مصرح به، عام/خاص)، وحوكمة البتكوين، والخصوصية والتبادلية، وتطبيقات سلسلة الكتل بخلاف الأموال الرقمية (خاصة التصويت الإلكتروني)
 * يقدم [الجزء الرابع](https://stakey.club/en/blockchain-gov-part4/) المبادئ الأساسية لمشروع الديكريد (الأمن، الإجماع، التمويل، الجلد في اللعبة) ويقارنها مع نهجي إثبات العمل و إثبات الحصة المحضة
 * يقيِّم [الجزء الخامس](https://stakey.club/en/blockchain-gov-part5/) أمن سلسلة الكتل وحوكمة البتكوين مقابل الديكريد باستخدام محاكاة هجوم [InvalidationGame](https://github.com/mmartins000/invalidationgame) ل mm@، مع مراعاة الهجمات الخارجية والداخلية. ويقدم التقرير، من بين تفاصيل أخرى، تقديرات منفصلة لنفقات رأس المال ونفقات التشغيل اللازمة لمهاجمة البتكوين والديكريد.
 * يختبر [الجزء السادس](https://stakey.club/en/blockchain-gov-part6/) عددا من الفرضيات مقابل البيانات الحقيقية (تتضمن المواضيع ارتباط المقاييس على السلسلة بالسعر، وإقبال الناخبين، ونموذج المربعات الصغرى العادية، وغير ذلك)
@@ -304,7 +304,7 @@ Coinmine بنسبة 0.02%
 * مقابلة مع BTC_Uncle@ عبر بودكاست Staked ([اليوتيوب](https://www.youtube.com/watch?v=__7LTz3nQKk)، [مقطع](https://www.youtube.com/watch?v=3ubS_27FEhE) قصير عن السبب وراء إختياره لديكريد)
 * مقابلة مع عمار نصير (Amarooni) عبر بودكاست Staked ([اليوتيوب](https://www.youtube.com/watch?v=g0bFMuHXrkU))
 * الجلسة الختامية للتحليل على السلسلة لعام 2020 لما يحدث على سلسلة البتكوين و الديكريد بواسطة Checkmate@ على ([اليوتيوب](https://www.youtube.com/watch?v=g60ovCl54OA))
-* Decred Deep Dive: إقتراب إطلاق برنامج التنين المخفي ذو الرؤس المتعددة! بواسطة Checkmate@ على ([اليوتيوب](https://www.youtube.com/watch?v=3AxBa-EE8RM)، [المناقشة](https://www.reddit.com/r/decred/comments/klz8ue/decred_deep_dive_hidden_hydra/))
+* Decred Deep Dive: إقتراب إطلاق برنامج التنين المخفي ذو الرؤوس المتعددة! بواسطة Checkmate@ على ([اليوتيوب](https://www.youtube.com/watch?v=3AxBa-EE8RM)، [المناقشة](https://www.reddit.com/r/decred/comments/klz8ue/decred_deep_dive_hidden_hydra/))
 
 الصوتيات:
 
@@ -319,7 +319,7 @@ Coinmine بنسبة 0.02%
 * البقاء على قيد الحياة من خلال التكيف - تصميم [السلع](https://twitter.com/OfficialCryptos/status/1338551937818562561) بواسطة OfficialCryptos@
 * الديكريد [تخترق CMC](https://twitter.com/exitusdcr/status/1343774006344880130) بقوة بواسطة Exitus@
 * [دولة الأمة الرقمية](https://twitter.com/AGNFAB1/status/1338963085537718275) بواسطة AGNFAB@
-* شارك New\_Copernicus@ المزيد من المقاطع التشويقية عن [برنامج التنين المخفي ذو الرؤس المتعددة](https://twitter.com/New_Copernicus/status/1336044535370092546)، [الديكريد إلى أسفل حفرة الأرنب](https://twitter.com/New_Copernicus/status/1339649654842126337)، [عطلات سعيدة مبهجة](https://twitter.com/New_Copernicus/status/1341665478935076865)! و[سنة جديدة سعيدة](https://twitter.com/New_Copernicus/status/1344509258176622593)!
+* شارك New\_Copernicus@ المزيد من المقاطع التشويقية عن [برنامج التنين المخفي ذو الرؤوس المتعددة](https://twitter.com/New_Copernicus/status/1336044535370092546)، [الديكريد إلى أسفل حفرة الأرنب](https://twitter.com/New_Copernicus/status/1339649654842126337)، [عطلات سعيدة مبهجة](https://twitter.com/New_Copernicus/status/1341665478935076865)! و[سنة جديدة سعيدة](https://twitter.com/New_Copernicus/status/1344509258176622593)!
 
 الترجمة:
 
@@ -387,11 +387,11 @@ Coinmine بنسبة 0.02%
 
 في محاولة للتخلص من المنظمين، غيرت Libra الخاصة بـالفيسبوك [علامتها التجارية](https://www.forbes.com/sites/jasonbrett/2020/12/02/facebooks-libra-renamed-to-diem-prior-to-stablecoin-launch) إلى Diem وأسقطت التطلع إلى دعمها بسلة من العملات لصالح دعم الدولار الأمريكي المباشر.
 
-تم الآن [الكشف](https://cointelegraph.com/news/ledger-data-leak-a-simple-mistake-exposed-270k-crypto-wallet-buyers) علنًا عن تسرب ليدجر لبيانات العملاء، والذي تم الإبلاغ عنه في شهر يوليوز. في الإعلان الأصلي، ذكرت ليدجر أنه تم الوصول إلى معلومات أكثر تفصيلاً مثل العنوان الفعلي لـ تسعة آلاف و خمسمائة عميل، ولكن يبدو [الآن](https://www.ledger.com/message-ledgers-ceo-data-leak/) أن هذه المعلومات تم جمعها لـ 272 ألف عميل.
+تم الآن [الكشف](https://cointelegraph.com/news/ledger-data-leak-a-simple-mistake-exposed-270k-crypto-wallet-buyers) علنًا عن تسرب لليجر لبيانات العملاء، والذي تم الإبلاغ عنه في شهر يوليوز. في الإعلان الأصلي، ذكرت ليدجر أنه تم الوصول إلى معلومات أكثر تفصيلاً مثل العنوان الفعلي لـ تسعة آلاف و خمسمائة عميل، ولكن يبدو [الآن](https://www.ledger.com/message-ledgers-ceo-data-leak/) أن هذه المعلومات تم جمعها لـ 272 ألف عميل.
 
 ## دعم مجلة الديكريد على شبكة الإنترنت!
 
-لا نعرف ما الذي فعلتموه يا رفاق لكن مجلة الديكريد لشهر نونبر شهدت نشاطا خارجا عن المألوف. بحيث حصدت أكثر من 100 إعجاب على التويتر من متوسط ​​60، و أزيد من ألف تصفيق على Medium مقابل حوالي 300 في العادي، لتصل إلى [أفضل 10](https://medium.com/tag/decentralized-exchange/archive/2020/12) منشورات في دجبنر المُشار إليها ب "DEX" على Medium، و آراء جيدة على Publish0x، وهكذا.
+لا نعرف ما الذي فعلتموه يا رفاق لكن مجلة الديكريد لشهر نونبر شهدت نشاطا خارجا عن المألوف. بحيث حصدت أكثر من 100 إعجاب على التويتر من متوسط ​​60، و وأكثر من ألف تصفيق على Medium مقابل حوالي 300 في العادي، لتصل إلى [أفضل 10](https://medium.com/tag/decentralized-exchange/archive/2020/12) منشورات في دجنبر  المُشار إليها ب "DEX" على Medium، و آراء جيدة على Publish0x، وهكذا.
 
 شكرًا لكم على الضغط على كل هذه الأزرار! يرجى الإستمرار في جلب الإنتباه إلى أفضل مشروع للعملة الرقمية.
 
