--- a/journal/202101.md
+++ b/journal/202101.md
@@ -10,7 +10,7 @@ _الصورة: تبديد الفائض بواسطة saender@_
 
 - تم إصدار النسخة 1.6، راجع قسم برنامج التنين المخفي ذو الرؤوس المتعددة أدناه للحصول على تفاصيل الإصدار.
 - استمر سعر التذكرة ونسبة المشاركة في إثبات الحصة في الارتفاع ليبلغا مستويات قياسية جديدة.
-- تم كسر سجل الإقبال على منصة بوليتيا للمقترحات في يناير/كانون الثاني، ومرة أخرى في فبراير/شباط، حتى بلغ 70% من المشاركة!
+- تم كسر سجل الإقبال على منصة بوليتيا للمقترحات في يناير، ومرة أخرى في فبراير، حتى بلغ 70% من المشاركة!
 - تمت الموافقة بالإجماع على التمويل المستمر لمنصة المُبادلات اللامركزية لديكريد DCRDEX، كما تمت الموافقة على مقترحات ديكريد في العمق و فريق ديكريد عربية.
 - وأخيرًا، أصبح لدى المجلة مقترح بوليتيا خاص بها (بشراكة مع الشريك الأصغر موجز بوليتيا) والذي سيضمن الحصول على تمويل لعام 2021، وقد بدأ التصويت عليه بالفعل.
 
